# cic-base-ng

./: .gitignore  CHANGELOG  legacy_requirements.txt  requirements.txt  setup.cfg  setup.py
cic_base/: __init__.py  settings.py
cic_base/cli/: arg.py  base.py  config.py
cic_base/legacy/: db.py
